--- a/interests/main.css
+++ b/interests/main.css
@@ -23,3 +23,15 @@ body{
     background-color: #000080;
     color: #000000;
 }
+
+.img{
+    height: 100%;
+}
+
+hr{
+    background-color: #000080;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    height: 3px;
+}
