--- a/main.css
+++ b/main.css
@@ -5,8 +5,19 @@
     -webkit-column-break-after: always;
 }
 
-.subtitle{
+ul.subtitle{
     font-size: 20pt;
+    text-align: justify;
+}
+
+.subtitle li{
+    display: inline-block;
+}
+
+.subtitle:after{
+    content: '';
+    width: 100%; /* Ensures justification for single lines */
+    display: inline-block;
 }
 
 .company{
@@ -53,13 +64,13 @@ h4{
 
 h1{
     font-size: 3em;
-/*    font-family: "Palatino Linotype";*/
+/*    font-family: "Palatino Linotype"; */
     font-family: "Century Gothic";
 }
 
 body{
-    background-color: #F5F5F5;
-    margin: 20px;
+    background-color: #d6dbe0 !important;
+    margin: 0px !important;
 }
 
 li.dropdown:hover > ul.dropdown-menu{
@@ -71,4 +82,14 @@ li.dropdown:hover > ul.dropdown-menu{
     color: #C0C0C0;
     width: 300px;
     margin-left: 30px;
+}
+
+.header{
+    background-image: url("Huashan.jpg");
+    background-size: cover;
+    height: 600px;
+    margin-left: 0px !important;
+    padding: 0px !important;
+    margin-top: 50px !important;
+    box-shadow: 1px 6px 3px rgba(0,0,0,.5);
 }
