--- a/grayscale/css/grayscale.css
+++ b/grayscale/css/grayscale.css
@@ -155,11 +155,11 @@ a:focus {
     opacity: 0.5;
     background-repeat: no-repeat;
     background-position: 50% 0;
-    -ms-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    -webkit-background-size: cover;
-    background-size: cover;
+    -ms-background-size: 100% auto;
+    -o-background-size: 100% auto;
+    -moz-background-size: 100% auto;
+    -webkit-background-size: 100% auto;
+    background-size: 100% auto;
 }
 .content-section {
   padding-top: 100px;
