Replaced headshot with professional photo

--- a/grayscale/css/grayscale.css
+++ b/grayscale/css/grayscale.css
@@ -452,8 +452,8 @@ body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 
-.img-responsive{
-    width: 200px;
+.face{
+    height: 325px;
 }
 
 a.page-scroll{
